# Rupert

./: .gitmodules
Approximate/: AbsoluteValue2.nb  CubeCubeRotMin.nb  GaussianIntegrals.nb
ChatGPT/: max_r_23.py  plot_r_111.py  plot_r_random.py  plot_r_random_many.py  plot_square_cube.py
LBNL/: Rupert_1_N.nb  Rupert_3_N.nb
Lines/: lines.py  rupertFunction.py  sample.out  sample.py
MPFUN/: sample  sample.c
MPFUN/mpfun20-mpfr-v28/: README-mpfun20-mpfr.txt
Minimize/C++/src/: CMakeLists.txt  angle.h  line.cpp  matrix.cpp  matrix.h  reduce.py  rotate.cpp  rotate.h  rupert.cpp  rupert.h  test01.cpp
Minimize/C/src/: CMakeLists.txt  line.c  matrix.c  matrix.h  rupert.c
Minimize/C/src/New/: line.c  matrix.c  matrix.h  rupert.c  rupert.h  test01.c
Minimize/C/src/Orig/: line.c  matrix.c  matrix.h  rupert.c
Minimize/Mathematica/: Play_02_03.nb
Minimize/Python/: gradient.py  line.py  minimize.py  optimizeCG.csh  optimizeCG.py  results.gnu  results.times.gnu  results.times.norm.gnu  (+19 more)
Primary/: ResultsCombinedByMod.txt  ResultsCombinedWithSquares.txt  RupertFamilies2023.nb  RupertPoly2023.wl  RupertPoly2023Check.nb  RupertPoly2023_01.nb  RupertPoly2023_02_01.nb  RupertPoly2023_03_01.nb  RupertPoly2023_defs.nb  Temp1.nb  Test1.m  Test1.wl  all.txt  extract.py  m01_00.txt  m02_00.txt  m02_01.txt  m03_00.txt  m03_01.txt  m03_02.txt  m04_00.txt  m04_01.txt  m04_02.txt  m04_03.txt  m05_00.txt  m05_01.txt  m05_02.txt  m05_03.txt  m05_04.txt  m06_00.txt  m06_01.txt  m06_02.txt  m06_03.txt  m06_04.txt  m06_05.txt  m07_00.txt  m07_01.txt  m07_02.txt  m07_03.txt  m07_04.txt  (+97 more)
(+7372 files in other folders)
