CMAKE_MINIMUM_REQUIRED(VERSION 3.28.3)

ADD_LIBRARY(Matrix STATIC matrix.h matrix.c)
ADD_LIBRARY(Rupert STATIC rupert.h rupert.c)

PROJECT(test01 LANGUAGES C)
ADD_EXECUTABLE(test01 test01.c)
TARGET_LINK_LIBRARIES(test01 PUBLIC Matrix)

PROJECT(line LANGUAGES C)
ADD_EXECUTABLE(line line.c)
TARGET_LINK_LIBRARIES(line PUBLIC Matrix Rupert)
